--- a/src/config/config.json
+++ b/src/config/config.json
@@ -7,17 +7,17 @@
 		"dialect": "mysql"
 	},
 	"test": {
-		"username": "root",
-		"password": null,
-		"database": "database_test",
-		"host": "127.0.0.1",
+		"username": "sql6705693",
+		"password": "ICbs7C6Qpj",
+		"database": "sql6705693",
+		"host": "sql6.freesqldatabase.com",
 		"dialect": "mysql"
 	},
 	"production": {
-		"username": "root",
-		"password": null,
-		"database": "database_production",
-		"host": "127.0.0.1",
+		"username": "sql6705693",
+		"password": "ICbs7C6Qpj",
+		"database": "sql6705693",
+		"host": "sql6.freesqldatabase.com",
 		"dialect": "mysql"
 	}
 }
